--- a/index.html
+++ b/index.html
@@ -4,46 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <style>
-        *,
-        *::before,
-        *::after {
-            box-sizing: border-box;
-        }
-
-
-        * {
-            margin: 0;
-        }
-
-        body {
-            background-color: #ddd
-        }
-
-        img {
-            display: block;
-            max-width: 100%;
-        }
-
-        main {
-
-            display: flex;
-            flex-direction: column;
-        }
-
-        h2 {
-            padding: 1em;
-        }
-    </style>
-    <title>work in progress</title>
+    <title>Document</title>
 </head>
 
 <body>
-    <main>
-        <h2>work in progress...</h2>
-        <img src="comingsoon.png" alt="image of a cat lying askew on a desk with puzzle pieces and pages of poetry">
-
-    </main>
 
 </body>
 
